--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -4,6 +4,7 @@
   min-width: 153px;
   border: none;
   position: relative;
+  transition: all .2s ease-out;
 }
 
 .card figcaption {
@@ -11,4 +12,11 @@
   bottom: .1rem;
   left: 50%;
   transform: translateX(-50%);
+}
+
+.card:hover {
+  cursor: pointer;
+  z-index: 1;
+  transform: scale(1.05);
+  box-shadow: 0 0 1rem rgba(0, 0, 0, .3);
 }
