--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,15 +1,23 @@
 #root {
   display: flex;
+  gap: 1rem;
   position: relative;
   min-height: 100vh;
+  background-color: var(--color-secondary);
 }
 
 .info {
   padding: 1rem 2rem 1rem 1rem;
   flex: 0 0 17rem;
-  background: rgb(70, 70, 70);
-  color: white;
+  background: var(--color-primary);
+  color: var(--color-secondary);
   box-shadow: inset -1rem 0 1rem -.5rem black;
+}
+
+@media (prefers-color-scheme: dark) {
+  .info {
+    box-shadow: 1rem 0 1rem -.5rem black;
+  }
 }
 
 .info h1 {
