--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,4 +1,5 @@
 .card {
+  background-color: transparent;
   box-sizing: content-box;
   min-height: 117px;
   border: none;
@@ -7,8 +8,10 @@
 }
 
 .card figcaption {
+  color: var(--color-primary);
+  font-weight: bold;
   position: absolute;
-  bottom: .1rem;
+  bottom: .2rem;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -17,5 +20,5 @@
   cursor: pointer;
   z-index: 1;
   transform: scale(1.02);
-  box-shadow: 0 0 1rem rgba(0, 0, 0, .3);
+  box-shadow: 0 0 1rem .4rem var(--color-primary-light);
 }
