--- a/src/styles/Grid.css
+++ b/src/styles/Grid.css
@@ -1,7 +1,7 @@
 .score {
   color: var(--color-secondary);
   text-align: right;
-  position: absolute;
+  position: fixed;
   bottom: 1rem;
   left: 1rem;
 }
