Apply the color scheme to input

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -29,6 +29,8 @@
 }
 
 .info input {
+  color: var(--color-primary);
+  background-color: var(--color-secondary);
   max-width: 3.1rem;
   margin-left: .3rem;
   padding: .1rem;
