--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,10 +8,10 @@
   font-size: 12px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color-scheme: light dark;
-  --color-primary: rgb(60, 60, 60);
+  --color-primary: rgb(70, 70, 70);
   --color-secondary: white;
   --color-primary-light: rgb(150, 150, 150);
-  --color-secondary-light: rgb(230, 230, 230);
+  /* --color-secondary-light: rgb(230, 230, 230); */
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,7 +19,7 @@
     --color-primary: rgb(220, 220, 220);
     --color-secondary: rgb(70, 70, 70);
     --color-primary-light: rgb(180, 180, 180);
-    --color-secondary-light: rgb(50, 50, 50);
+    /* --color-secondary-light: rgb(50, 50, 50); */
   }
 }
 
