--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,14 +1,16 @@
 #root {
   display: flex;
-  gap: 1rem;
   position: relative;
   min-height: 100vh;
-  background-color: var(--color-secondary);
+  background-color: var(--color-primary);
 }
 
 .info {
+  position: sticky;
+  top: 0;
   padding: 1rem 2rem 1rem 1rem;
-  flex: 0 0 17rem;
+  flex: 0 1 17rem;
+  height: 100vh;
   background: var(--color-primary);
   color: var(--color-secondary);
   box-shadow: inset -1rem 0 1rem -.5rem black;
