--- a/src/styles/Grid.css
+++ b/src/styles/Grid.css
@@ -7,7 +7,8 @@
 }
 
 .grid {
-  padding: .5rem;
+  background-color: var(--color-secondary);
+  padding: .5rem .5rem .5rem 1.5rem;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(153px, 1fr));
