--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,7 +9,7 @@
   position: sticky;
   top: 0;
   padding: 1rem 2rem 1rem 1rem;
-  flex: 0 1 17rem;
+  flex: 0 1 20rem;
   height: 100vh;
   background: var(--color-primary);
   color: var(--color-secondary);
@@ -23,7 +23,14 @@
 }
 
 .info h1 {
+  font-size: 2.5rem;
   margin-bottom: 2rem;
+}
+
+.info p,
+.info label,
+.info input {
+  font-size: 1.4rem;
 }
 
 .info p {
